--- a/src/App.css
+++ b/src/App.css
@@ -1,42 +1,135 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+:root {
+  --space-xs: 0.25rem;
+  --space-sm: 0.5rem;
+  --space-md: 1rem;
+  --space-lg: 1.5rem;
+  --space-xl: 2rem;
+  --fundo: #fafafa;
+  --imagens: #f2f2f2;
+  --botao: #40746e;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+* {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  box-sizing: border-box;
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.container {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-rows:auto auto 1fr auto auto ;
+  grid-template-areas: "header header header"
+                       "nav nav nav"   
+                       "main main main"
+                       "article article aside"  
+                       "footer footer footer";
+  font-family: Arial, Helvetica, sans-serif;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
+header {grid-area: header;}
+nav {grid-area: nav;}
+main {grid-area: main;}
+article {grid-area: article;}
+aside {grid-area: aside;}
+footer{grid-area: footer;}
+
+
+@media (max-width: 320px) {
+.container {
+  grid-template-columns: 1fr;
+  grid-template-rows: auto auto auto auto auto auto;
+  grid-template-areas: "header"
+                        "nav"
+                        "main"
+                        "article"
+                        "aside"
+                        "footer";
 }
 
-.card {
-  padding: 2em;
+header  {
+  display: flex;
+  flex-wrap: wrap;
 }
 
-.read-the-docs {
-  color: #888;
+header a {
+
+  text-decoration: none;
+  color: black;
+}
+
+header input, button {
+
+  margin-top: var(--space-md);
+  
+}
+
+header input {
+  padding: var(--space-xs);
+  border: 1px solid var(--imagens);
+  border-radius: 5px;
+}
+
+
+header input:focus {
+  padding: var(--space-xs);
+  border: 1px solid var(--fundo);
+  border-radius: 5px;
+}
+
+}
+
+@media (max-width: 768px) {
+  
+  header a {
+  padding: var(--space-xs);
+  text-decoration: none;
+  color: black;
+}
+
+header input, button {
+  margin: var(--space-xs);
+  margin-top: var(--space-md);
+}
+
+header input {
+  padding: var(--space-xs);
+  border: 1px solid var(--imagens);
+  border-radius: 5px;
+}
+
+header input:focus {
+  padding: var(--space-xs);
+  border: 1px solid var(--fundo);
+  border-radius: 5px;
+}
+
+}
+
+@media (max-width: 1440px) {
+  
+  header a {
+  padding: var(--space-xs);
+  text-decoration: none;
+  color: black;
+}
+
+header input, button {
+  margin: var(--space-xs);
+  margin-top: var(--space-md);
+}
+
+header input {
+  padding: var(--space-xs);
+  border: 1px solid var(--fundo);
+  border-radius: 5px;
+}
+
+header input:focus {
+  padding: var(--space-xs);
+  border: 1px solid var(--fundo);
+  border-radius: 5px;
+}
+
 }
