--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -1,58 +1,7 @@
-* {
-  margin: 0;
-  padding: 0;
-  border: 0;
-  box-sizing: border-box;
-}
 
-:root {
-  --space-xs: 0.25rem;
-  --space-sm: 0.5rem;
-  --space-md: 1rem;
-  --space-lg: 1.5rem;
-  --space-xl: 2rem;
-  --font-size: 14px;
-  --fundo: #fafafa;
-  --imagens: #f2f2f2;
-  --botao: #40746e;
-  --texto:black;
-}
+@import url('./root.css');
 
-
-
-.container {
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
-  grid-template-rows:auto auto 1fr auto auto ;
-  grid-template-areas: "header header header"
-                       "nav nav nav"   
-                       "main main main"
-                       "article article aside"  
-                       "footer footer footer";
-  font-family: Arial, Helvetica, sans-serif;
-}
-
-header {grid-area: header;}
-nav {grid-area: nav;}
-main {grid-area: main;}
-article {grid-area: article;}
-aside {grid-area: aside;}
-footer{grid-area: footer;}
-
-
-@media (max-width: 320px) {
-.container {
-  grid-template-columns: 1fr;
-  grid-template-rows: auto auto auto auto auto auto;
-  grid-template-areas: "header"
-                        "nav"
-                        "main"
-                        "article"
-                        "aside"
-                        "footer";
-}
-
-header  {
+header {
   display: flex;
   flex-wrap: wrap;
 }
@@ -68,6 +17,7 @@ header input {
   padding: var(--space-xs);
   border: 1px solid var(--imagens);
   border-radius: 5px;
+  margin-top: var(--space-sm);
 }
 
 header input:focus {
@@ -77,6 +27,8 @@ header input:focus {
 
 header button {
   padding: var(--space-sm);
+  margin: var(--space-xs);
+  margin-top: var(--space-sm);
   background-color: white;
   border: 1px solid var(--botao);
   border-radius: 5px;
@@ -93,6 +45,7 @@ header button:hover {
   background-color: var(--fundo);
 }
 
+
 nav h2 {
   margin: var(--space-sm);
 }
@@ -107,6 +60,7 @@ nav button:first-of-type {
   border: 1px solid var(--botao);
   border-radius: 5px;
   color: white;
+  margin: var(--space-sm);
 }
 
 nav button:first-of-type:hover {
@@ -120,6 +74,7 @@ nav button:last-of-type {
   border: 1px solid var(--botao);
   border-radius: 5px;
   color: var(--botao);
+  margin: var(--space-sm);
 }
 
 nav button:last-of-type:hover {
@@ -148,6 +103,19 @@ nav button:last-of-type:hover {
   width: fit-content;
 }
 
+.lista-categorias a,
+.cards a {
+  text-decoration: none;
+  outline: none;
+  color: black;
+}
+
+.lista-categorias a:hover,
+.cards a:hover {
+  text-decoration: underline;
+  outline: none;
+}
+
 .cards h4 {
   display: flex;
   align-items: flex-end;
@@ -159,6 +127,7 @@ nav button:last-of-type:hover {
   min-width: 200px;
   min-height: 80px;
 }
+
 
 .categorias-geral {
   padding: var(--space-xs)
@@ -250,97 +219,14 @@ footer h4 {
   max-width: 90px;
   max-height: 80px;
 }
+
+footer::after {
+  content: "© 2025 Meu site • Meu Site";
+  display: block;
+  flex-basis: 100%;
+  margin-top: 20px;
+  font-size: 12px;
+  color:rgb(193, 193, 193);
+  text-align: start;
 }
 
-
-
-
-
-@media (max-width: 768px) {
-  
-  header a {
-  padding: var(--space-xs);
-  text-decoration: none;
-  color: black;
-}
-
-header input, button {
-  margin: var(--space-xs);
-  margin-top: var(--space-md);
-}
-
-header input {
-  padding: var(--space-xs);
-  border: 1px solid var(--imagens);
-  border-radius: 5px;
-}
-header input:focus {
-  outline: none;
-  border: 1px solid var(--botao)
-}
-
-header button {
-  padding: var(--space-sm);
-  background-color: white;
-  border: 1px solid var(--botao);
-  border-radius: 5px;
-  color: var(--botao);
-}
-
-header button:hover {
-  color: white;
-  background-color: var(--botao);
-}
-
-.principal  {
-  border: 1px solid white ;
-  background-color: var(--fundo);
-}
-
-
-}
-
-
-
-@media (max-width: 1440px) {
-  
-  header a {
-  padding: var(--space-xs);
-  text-decoration: none;
-  color: black;
-}
-
-header input, button {
-  margin: var(--space-xs);
-  margin-top: var(--space-md);
-}
-
-header input {
-  padding: var(--space-xs);
-  border: 1px solid var(--fundo);
-  border-radius: 5px;
-}
-header input:focus {
-  outline: none;
-  border: 1px solid var(--botao)
-}
-
-header button {
-  padding: var(--space-sm);
-  background-color: white;
-  border: 1px solid var(--botao);
-  border-radius: 5px;
-  color: var(--botao);
-}
-
-header button:hover {
-  color: white;
-  background-color: var(--botao);
-}
-
-.principal {
-  border: 1px solid white ;
-  background-color: var(--fundo);
-}
-
-}
