--- a/src/styles/techno.css
+++ b/src/styles/techno.css
@@ -1,5 +1,3 @@
-@import url('breakpoints.css');
-@import url('root.css');
 
 /* Filtros */
 .filtros {
@@ -12,7 +10,7 @@
 .filtros a {
   text-decoration: none;
   color: black;
-  border: 1px solid black;
+  border: 1px solid white;
   border-radius: 20px;
   padding: 0.4rem 0.8rem;
   font-size: var(--font-size);
@@ -61,13 +59,18 @@
 
 /* Botão "Carregar mais" */
 .botao {
-  display: flex;
+   display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: var(--space-md) auto;
   padding: var(--space-sm);
   background-color: white;
   border: 1px solid var(--botao);
   border-radius: 5px;
   color: var(--botao);
   cursor: pointer;
+  text-align: center;
+  max-width: 250px;
 }
 
 .botao:hover {
