--- a/src/App.css
+++ b/src/App.css
@@ -121,7 +121,9 @@ html,body,#root { height:100%; margin:0; font-family: Inter, system-ui, Arial; c
   border-bottom: none;
 }
 
-.align-right {
+.align-right,
+.table th.align-right,
+.table td.align-right {
   text-align: right !important;
 }
 
